configuracion/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shernandez
  labels:
     php: isc_reticula
