configuracion/deployment-mysql.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: deployment-mysql
  labels:
    mysql: database
spec:
  selector:
    matchLabels:
      mysql: database
      tier: database-back
  replicas: 1
  template:
    metadata:
      labels:
        mysql: database
        tier: database-back
    spec:
      containers:
      - name: db-mysql
        image: shglez/mysql:v1
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-volume-mounts
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-volume-mounts
        persistentVolumeClaim:
          claimName: mysql-volume-claim
