configuracion/service-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-php
  labels:
    php: isc_reticula
    tier: php-front
spec:  
  ports:
  - port: 80
  type: NodePort 
  selector:
    php: isc_reticula
    tier: php-front
